# wolfsound-dsp-utils

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.py
.github/workflows/: cmake.yml
cmake/: cpm.cmake
src/: CMakeLists.txt
src/include/wolfsound/common/: wolfsound_ClosedRangeValue.hpp  wolfsound_DecibelsFullScale.hpp  wolfsound_Frequency.hpp  wolfsound_Interval.hpp  wolfsound_MidiNoteNumber.hpp  wolfsound_WhenLeavingScopeExecute.hpp  wolfsound_assert.hpp  wolfsound_mathFunctions.hpp
src/include/wolfsound/dsp/: wolfsound_FractionalDelayLine.hpp  wolfsound_testSignals.hpp
src/include/wolfsound/file/: wolfsound_WavFileReader.hpp  wolfsound_WavFileWriter.hpp
src/include/wolfsound/juce/: wolfsound_ParameterHolder.hpp  wolfsound_SerializedParameters.hpp  wolfsound_callOnMessageThreadIfNotNull.hpp
src/include/wolfsound/test/: wolfsound_ProcessorFileIoTest.hpp  wolfsound_TestAudioProcessorBase.h
tests/: CMakeLists.txt
tests/src/common/: MidiNoteNumberTests.cpp  WhenLeavingScopeExecuteTests.cpp
tests/src/dsp/: FractionalDelayLineTests.cpp  TestSignalsTests.cpp
tests/src/file/: WavFileReaderWriterTests.cpp
tests/src/juce/: ParameterHolderTests.cpp  SerializedParametersTests.cpp  callOnMessageThreadIfNotNullTests.cpp
